--- a/Index.html
+++ b/Index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games Shop - A sua loja de games</title>
+    <title>CURIOUS GAME - Tudo sobre os games atuais</title>
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
             <h1>
-                Games Shop
+                CURIOUS GAME
             </h1>
             <nav>
                 <ul>
                     <li>
-                        <a href="#about">Sobre a loja</a>
+                        <a href="#about">Sobre o jogo</a>
                     </li>
                     <li>
                         <a href="#contact">Contato</a>
@@ -29,19 +29,18 @@
     </header>
     <section id="about">
         <div class="container">
-            <img class="store-front" src="./images/loja.jpg" alt="Fachada da loja Games Shop">
+            <img class="store-front" src="./images/wildrift.jpg" alt= "Imagem com guerreiro animados armados">
             <div>
-                <h2>Sobre a loja</h2>
+                <h2>Sobre o jogo</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo suscipit dolor dolores debitis, rerum aspernatur. Saepe voluptates sit, debitis numquam ullam neque explicabo quae alias maiores voluptatem facere esse eos?
+                    Wild Rift é um jogo multiplayer online de batalha em arena desenvolvido e publicado pela Riot Games. Ele foi lançado para dispositivos móveis (iOS e Android) e consoles no final de 2020. O jogo é uma versão adaptada do League of Legends, o popular jogo de PC. Em Wild Rift, os jogadores assumem o papel de um campeão e competem em equipes de cinco jogadores, com o objetivo de destruir a base inimiga enquanto defendem a sua própria. Cada jogador controla seu campeão, que possui habilidades únicas e pode ser aprimorado ao longo da partida.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid commodi labore ab quisquam dolores quia optio, delectus fugiat nihil accusantium libero perspiciatis facilis deserunt natus voluptate provident incidunt repellat vel?
+                    Em resumo, Wild Rift é uma versão adaptada do League of Legends para dispositivos móveis e consoles, oferecendo uma experiência de jogo acessível, controles intuitivos e partidas rápidas. Com uma variedade de campeões e um modo competitivo, o jogo cativa os jogadores e mantém a essência estratégica e emocionante do League of Legends original.
                 </p>
                 <ul class="brands-list">
-                    <li><img src="./images/nintendo.png" alt="Nitendo"></li>
-                    <li><img src="./images/xbox.png" alt="Xbox"></li>
-                    <li><img src="./images/playstation.png" alt="Playstation"></li>
+                    <li><img src="./images/basedebatalha.jpg" alt="Base feita de pedra onde os personagens do jogo ficam posicionados"></li>
+                    <li><img src="./images/campodebatalha.jpeg" alt="campo com arbustos e animais animados onde os pesonagens do jogo batalham"></li>
                 </ul>
             </div>
         </div>
@@ -92,7 +91,7 @@
     <footer>
         <div class="container">
             <p>
-                &copy; Games Shop - Todos os direitos reservados - 2023
+                &copy; Curious Game - Todos os direitos reservados - 2023
             </p>
         </div>
     </footer>
